xresource-core-starter/src/main/java/org/xresource/internal/intent/core/antlr/IntentDslParser.java
// Generated from IntentDsl.g4 by ANTLR 4.13.1
package org.xresource.internal.intent.core.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IntentDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, BOOLEAN=41, INT=42, STRING=43, IDENTIFIER=44, NEWLINE=45, 
		WS=46, COMMENT=47, INDENT=48, DEDENT=49;
	public static final int
		RULE_intent = 0, RULE_descriptionBlock = 1, RULE_aliasBlock = 2, RULE_whereBlock = 3, 
		RULE_paginationBlock = 4, RULE_limitBlock = 5, RULE_selectBlock = 6, RULE_selectList = 7, 
		RULE_joinBlock = 8, RULE_joinFilterBlock = 9, RULE_parameterBlock = 10, 
		RULE_paramEntry = 11, RULE_sortBlock = 12, RULE_groupBlock = 13, RULE_qualifiedName = 14, 
		RULE_paramSource = 15, RULE_bindingType = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"intent", "descriptionBlock", "aliasBlock", "whereBlock", "paginationBlock", 
			"limitBlock", "selectBlock", "selectList", "joinBlock", "joinFilterBlock", 
			"parameterBlock", "paramEntry", "sortBlock", "groupBlock", "qualifiedName", 
			"paramSource", "bindingType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Create'", "'Intent'", "'for'", "'resource'", "'as'", "'Description'", 
			"'With'", "'alias'", "'Where'", "'Paginated'", "'Limit'", "'Select'", 
			"','", "'Include'", "'Add'", "'filter'", "'having'", "'exact'", "'like'", 
			"'in'", "'greater_than'", "'less_than'", "'value'", "'from'", "'parameter'", 
			"'Parameters'", "'Param'", "'with'", "'datatype'", "'default'", "'source'", 
			"'using'", "'Sort'", "'by'", "'Group'", "'.'", "'static'", "'user_context'", 
			"'security_profile'", "'request'", null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "BOOLEAN", "INT", "STRING", "IDENTIFIER", 
			"NEWLINE", "WS", "COMMENT", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IntentDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IntentDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntentContext extends ParserRuleContext {
		public Token resourceName;
		public Token intentName;
		public TerminalNode INDENT() { return getToken(IntentDslParser.INDENT, 0); }
		public List<TerminalNode> DEDENT() { return getTokens(IntentDslParser.DEDENT); }
		public TerminalNode DEDENT(int i) {
			return getToken(IntentDslParser.DEDENT, i);
		}
		public TerminalNode EOF() { return getToken(IntentDslParser.EOF, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(IntentDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IntentDslParser.IDENTIFIER, i);
		}
		public List<DescriptionBlockContext> descriptionBlock() {
			return getRuleContexts(DescriptionBlockContext.class);
		}
		public DescriptionBlockContext descriptionBlock(int i) {
			return getRuleContext(DescriptionBlockContext.class,i);
		}
		public List<AliasBlockContext> aliasBlock() {
			return getRuleContexts(AliasBlockContext.class);
		}
		public AliasBlockContext aliasBlock(int i) {
			return getRuleContext(AliasBlockContext.class,i);
		}
		public List<WhereBlockContext> whereBlock() {
			return getRuleContexts(WhereBlockContext.class);
		}
		public WhereBlockContext whereBlock(int i) {
			return getRuleContext(WhereBlockContext.class,i);
		}
		public List<PaginationBlockContext> paginationBlock() {
			return getRuleContexts(PaginationBlockContext.class);
		}
		public PaginationBlockContext paginationBlock(int i) {
			return getRuleContext(PaginationBlockContext.class,i);
		}
		public List<LimitBlockContext> limitBlock() {
			return getRuleContexts(LimitBlockContext.class);
		}
		public LimitBlockContext limitBlock(int i) {
			return getRuleContext(LimitBlockContext.class,i);
		}
		public List<SelectBlockContext> selectBlock() {
			return getRuleContexts(SelectBlockContext.class);
		}
		public SelectBlockContext selectBlock(int i) {
			return getRuleContext(SelectBlockContext.class,i);
		}
		public List<JoinBlockContext> joinBlock() {
			return getRuleContexts(JoinBlockContext.class);
		}
		public JoinBlockContext joinBlock(int i) {
			return getRuleContext(JoinBlockContext.class,i);
		}
		public List<ParameterBlockContext> parameterBlock() {
			return getRuleContexts(ParameterBlockContext.class);
		}
		public ParameterBlockContext parameterBlock(int i) {
			return getRuleContext(ParameterBlockContext.class,i);
		}
		public List<SortBlockContext> sortBlock() {
			return getRuleContexts(SortBlockContext.class);
		}
		public SortBlockContext sortBlock(int i) {
			return getRuleContext(SortBlockContext.class,i);
		}
		public List<GroupBlockContext> groupBlock() {
			return getRuleContexts(GroupBlockContext.class);
		}
		public GroupBlockContext groupBlock(int i) {
			return getRuleContext(GroupBlockContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(IntentDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IntentDslParser.NEWLINE, i);
		}
		public IntentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitIntent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntentContext intent() throws RecognitionException {
		IntentContext _localctx = new IntentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_intent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			match(T__1);
			setState(36);
			match(T__2);
			setState(37);
			match(T__3);
			setState(38);
			((IntentContext)_localctx).resourceName = match(IDENTIFIER);
			setState(39);
			match(T__4);
			setState(40);
			((IntentContext)_localctx).intentName = match(IDENTIFIER);
			setState(41);
			match(INDENT);
			setState(53); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
					{
					setState(42);
					descriptionBlock();
					}
					break;
				case T__6:
					{
					setState(43);
					aliasBlock();
					}
					break;
				case T__8:
					{
					setState(44);
					whereBlock();
					}
					break;
				case T__9:
					{
					setState(45);
					paginationBlock();
					}
					break;
				case T__10:
					{
					setState(46);
					limitBlock();
					}
					break;
				case T__11:
					{
					setState(47);
					selectBlock();
					}
					break;
				case T__13:
					{
					setState(48);
					joinBlock();
					}
					break;
				case T__25:
					{
					setState(49);
					parameterBlock();
					}
					break;
				case T__32:
					{
					setState(50);
					sortBlock();
					}
					break;
				case T__34:
					{
					setState(51);
					groupBlock();
					}
					break;
				case NEWLINE:
					{
					setState(52);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 35227388894912L) != 0) );
			setState(57);
			match(DEDENT);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEDENT) {
				{
				{
				setState(58);
				match(DEDENT);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DescriptionBlockContext extends ParserRuleContext {
		public Token description;
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(IntentDslParser.STRING, 0); }
		public DescriptionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptionBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitDescriptionBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionBlockContext descriptionBlock() throws RecognitionException {
		DescriptionBlockContext _localctx = new DescriptionBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_descriptionBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__5);
			setState(67);
			((DescriptionBlockContext)_localctx).description = match(STRING);
			setState(68);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasBlockContext extends ParserRuleContext {
		public Token alias;
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(IntentDslParser.IDENTIFIER, 0); }
		public AliasBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitAliasBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasBlockContext aliasBlock() throws RecognitionException {
		AliasBlockContext _localctx = new AliasBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_aliasBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__6);
			setState(71);
			match(T__7);
			setState(72);
			((AliasBlockContext)_localctx).alias = match(IDENTIFIER);
			setState(73);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereBlockContext extends ParserRuleContext {
		public Token condition;
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(IntentDslParser.STRING, 0); }
		public WhereBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitWhereBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereBlockContext whereBlock() throws RecognitionException {
		WhereBlockContext _localctx = new WhereBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whereBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__8);
			setState(76);
			((WhereBlockContext)_localctx).condition = match(STRING);
			setState(77);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PaginationBlockContext extends ParserRuleContext {
		public Token paginatedValue;
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode BOOLEAN() { return getToken(IntentDslParser.BOOLEAN, 0); }
		public PaginationBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paginationBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitPaginationBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PaginationBlockContext paginationBlock() throws RecognitionException {
		PaginationBlockContext _localctx = new PaginationBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paginationBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__9);
			setState(80);
			((PaginationBlockContext)_localctx).paginatedValue = match(BOOLEAN);
			setState(81);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LimitBlockContext extends ParserRuleContext {
		public Token limitValue;
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode INT() { return getToken(IntentDslParser.INT, 0); }
		public LimitBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_limitBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitLimitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LimitBlockContext limitBlock() throws RecognitionException {
		LimitBlockContext _localctx = new LimitBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_limitBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__10);
			setState(84);
			((LimitBlockContext)_localctx).limitValue = match(INT);
			setState(85);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectBlockContext extends ParserRuleContext {
		public List<SelectListContext> selectList() {
			return getRuleContexts(SelectListContext.class);
		}
		public SelectListContext selectList(int i) {
			return getRuleContext(SelectListContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(IntentDslParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(IntentDslParser.INDENT, 0); }
		public SelectBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitSelectBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectBlockContext selectBlock() throws RecognitionException {
		SelectBlockContext _localctx = new SelectBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__11);
			setState(88);
			selectList();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(89);
				match(T__12);
				setState(90);
				selectList();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==INDENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectListContext extends ParserRuleContext {
		public Token field;
		public Token alias;
		public List<TerminalNode> IDENTIFIER() { return getTokens(IntentDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IntentDslParser.IDENTIFIER, i);
		}
		public SelectListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitSelectList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectListContext selectList() throws RecognitionException {
		SelectListContext _localctx = new SelectListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selectList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((SelectListContext)_localctx).field = match(IDENTIFIER);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(99);
				match(T__4);
				setState(100);
				((SelectListContext)_localctx).alias = match(IDENTIFIER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JoinBlockContext extends ParserRuleContext {
		public Token resourceName;
		public Token alias;
		public TerminalNode INDENT() { return getToken(IntentDslParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(IntentDslParser.DEDENT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(IntentDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IntentDslParser.IDENTIFIER, i);
		}
		public List<SelectBlockContext> selectBlock() {
			return getRuleContexts(SelectBlockContext.class);
		}
		public SelectBlockContext selectBlock(int i) {
			return getRuleContext(SelectBlockContext.class,i);
		}
		public List<JoinFilterBlockContext> joinFilterBlock() {
			return getRuleContexts(JoinFilterBlockContext.class);
		}
		public JoinFilterBlockContext joinFilterBlock(int i) {
			return getRuleContext(JoinFilterBlockContext.class,i);
		}
		public List<JoinBlockContext> joinBlock() {
			return getRuleContexts(JoinBlockContext.class);
		}
		public JoinBlockContext joinBlock(int i) {
			return getRuleContext(JoinBlockContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(IntentDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IntentDslParser.NEWLINE, i);
		}
		public JoinBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_joinBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitJoinBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JoinBlockContext joinBlock() throws RecognitionException {
		JoinBlockContext _localctx = new JoinBlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_joinBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__13);
			setState(104);
			((JoinBlockContext)_localctx).resourceName = match(IDENTIFIER);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(105);
				match(T__4);
				setState(106);
				((JoinBlockContext)_localctx).alias = match(IDENTIFIER);
				}
			}

			setState(109);
			match(INDENT);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372142080L) != 0)) {
				{
				setState(114);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(110);
					selectBlock();
					}
					break;
				case T__14:
					{
					setState(111);
					joinFilterBlock();
					}
					break;
				case T__13:
					{
					setState(112);
					joinBlock();
					}
					break;
				case NEWLINE:
					{
					setState(113);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JoinFilterBlockContext extends ParserRuleContext {
		public Token field;
		public Token binding;
		public Token paramName;
		public List<TerminalNode> IDENTIFIER() { return getTokens(IntentDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(IntentDslParser.IDENTIFIER, i);
		}
		public JoinFilterBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_joinFilterBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntentDslVisitor ) return ((IntentDslVisitor<? extends T>)visitor).visitJoinFilterBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JoinFilterBlockContext joinFilterBlock() throws RecognitionException {
		JoinFilterBlockContext _localctx = new JoinFilterBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_joinFilterBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__14);
			setState(122);
			match(T__15);
			setState(123);
			match(T__2);
			setState(124);
			((JoinFilterBlockContext)_localctx).field = match(IDENTIFIER);
			setState(125);
			match(T__16);
			setState(126);
			((JoinFilterBlockContext)_localctx).binding = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8126464L) != 0)) ) {
				((JoinFilterBlockContext)_localctx).binding = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(127);
			match(T__22);
			setState(128);
			match(T__23);
			setState(129);
			match(T__24);
			setState(130);
			((JoinFilterBlockContext)_localctx).paramName = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
